<resources>
    <string name="app_name">MHFZZ Database</string>
    <string name="app_name_launcher">MHFZZDB</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="search_hint">Search Database</string>
    <string name="filter_hint">Filter…</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="submit">Submit</string>
    <string name="undo">Undo</string>
    <string name="about">About</string>
    <string name="about_version">Version %s</string>
    <string name="about_message">
        Gathering Hall Studios is an open source team of designers and developers
        dedicated to building high-quality apps for the Monster Hunter series.
        Contact them at contact@gatheringhallstudios.com or visit their Discord!
    </string>
    <string name="about_artist">Artist</string>
    <string name="about_global">Global</string>
    <string name="about_europe">Europe</string>
    <string name="about_channel">Channel</string>
    <string name="about_website">Website</string>
    <string name="about_source">Source</string>
    <string name="about_language_en">English</string>
    <string name="about_language_fr">French</string>
    <string name="about_language_de">German</string>
    <string name="about_language_it">Italian</string>
    <string name="about_language_pt">Portuguese</string>
    <string name="about_language_ja">Japanese</string>
    <string name="about_japanese_wiki">Japanese Wiki</string>
    <string name="about_asb">Armor Set Builder</string>
    <string name="about_title_links_mael">Links (MAEL)</string>
    <string name="about_title_links_ghstudios">Links (GHStudios)</string>
    <string name="about_title_libraries">Open Source Libraries</string>
    <string name="about_title_credits_mhfzz">Credits (MHFZZ)</string>
    <string name="about_title_credits_mhgu">Credits (MHGU)</string>
    <string name="about_title_credits_mhgen">Credits (MHGen)</string>
    <string name="about_title_credits_data_support">Credits (Data Support)</string>
    <string name="about_title_credits_data_sources">Credits (Data Sources)</string>
    <string name="about_title_credits_app_translation">Credits (App Translations)</string>
    <string name="about_title_credits_translation">Credits (Sources Translations)</string>
    <string name="about_title_ghstudios">About Gathering Hall Studios</string>
    <string name="about_title_community">Community</string>
    <string name="value_zenny">%dz</string>
    <string name="placeholder_unknown">Unknown</string>
    <string name="filter_final_option">Final Only</string>
    <string name="empty_message">No Data</string>
    <string name="list_empty_message">Insufficient materials.</string>
    <string name="dialog_message_delete">\"%s\" will be deleted.</string>
    <string name="dialog_message_delete_multi">These %d items will be deleted.</string>
    <string name="dialog_message_copy">\"%s\" will be duplicated.</string>
    <string name="dialog_message_copy_multi">These %d items will be duplicated.</string>
    <string name="exit_title">Abandon Quest</string>
    <string name="exit_dialog">Stop the Quest and return to town?</string>
    <string name="exit_confirm">Yes</string>
    <string name="exit_cancel">No</string>
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">More…</string>
    <string name="type_location">Location</string>
    <string name="type_monster">Monster</string>
    <string name="type_quest">Quest</string>
    <string name="type_skill_tree">Skill Tree</string>
    <string name="type_item">Item</string>
    <string name="type_bento">Bento</string>
    <string name="type_cuff">Cuff</string>
    <string name="type_weapon">Weapon</string>
    <string name="type_armor">Armor</string>
    <string name="type_armor_set">Armor Set</string>
    <string name="type_armor_set_gunner">Armor Set (Gunner)</string>
    <string name="type_armor_set_blade">Armor Set (Blade)</string>
    <string name="type_decoration">Decoration</string>
    <string name="type_palico_weapon">Palico Weapon</string>
    <string name="type_palico_armor">Palico Armor</string>
    <string name="type_material">Material</string>
    <string name="type_hub_village">Unimplemented</string>
    <string name="type_hub_hunter_quests">Hunter</string>
    <string name="type_hub_g_hunter_quests">G Hunter</string>
    <string name="type_hub_special_quests">Special</string>
    <string name="type_hub_g_special_quests">G Special</string>
    <string name="type_hub_conquest">Conquest</string>
    <string name="type_hub_other">Other</string>
    <string name="type_hub_zenith">Zenith</string>
    <string name="type_hub_caravan">Caravan</string>
    <string name="type_hub_placetwo">Place Two</string>
    <string name="type_hub_placethree">Place Three</string>
    <string name="type_hub_placefour">Place Four</string>
    <string name="type_hub_guild">Guild</string>
    <string name="type_hub_event">Event</string>
    <string name="type_hub_arena">Arena</string>
    <string name="type_hub_permit">Permit</string>
    <string name="type_weapon_greatsword">Great Sword</string>
    <string name="type_weapon_longsword">Long Sword</string>
    <string name="type_weapon_tonfa">Tonfa</string>
    <string name="type_weapon_magnetspike">Magnet Spike</string>
    <string name="type_weapon_swordandshield">Sword and Shield</string>
    <string name="type_weapon_dualblades">Dual Blades</string>
    <string name="type_weapon_hammer">Hammer</string>
    <string name="type_weapon_huntinghorn">Hunting Horn</string>
    <string name="type_weapon_lance">Lance</string>
    <string name="type_weapon_gunlance">Gunlance</string>
    <string name="type_weapon_switchaxe">Switch Axe</string>
    <string name="type_weapon_chargeblade">Charge Blade</string>
    <string name="type_weapon_insectglaive">Insect Glaive</string>
    <string name="type_weapon_lightbowgun">Light Bowgun</string>
    <string name="type_weapon_heavybowgun">Heavy Bowgun</string>
    <string name="type_weapon_bow">Bow</string>
    <string name="palicos">Palicos</string>
    <string name="combining">Combining</string>
    <string name="skills">Skills</string>
    <string name="recipes">Recipes</string>
    <string name="format_plus">%1$+d</string>
    <string name="skill_points">%s %+d</string>
    <string name="skill_points_joined">%s / %s</string>
    <string name="value_rare">Rare %s</string>
    <string name="rank_ex">Training</string>
    <string name="rank_lr">Low Rank</string>
    <string name="rank_hr">High Rank</string>
    <string name="rank_gou">Gou Rank</string>
    <string name="rank_g">G Rank</string>
    <string name="rank_z1">Z★1</string>
    <string name="rank_z2">Z★2</string>
    <string name="rank_z3">Z★3</string>
    <string name="rank_z4">Z★4</string>
    <string name="rank_any">Any</string>
    <string name="ailment_roar_small">Small Roar</string>
    <string name="ailment_roar_large">Large Roar</string>
    <string name="ailment_roar_small_special">Small Special Roar</string>
    <string name="ailment_roar_special">Special Roar</string>
    <string name="ailment_wind_small">Small Wind Pressure</string>
    <string name="ailment_wind_large">Large Wind Pressure</string>
    <string name="ailment_wind_dragon">Dragon Wind Pressure</string>
    <string name="ailment_tremor">Tremor</string>
    <string name="ailment_fire">Fireblight</string>
    <string name="ailment_water">Waterblight</string>
    <string name="ailment_thunder">Thunderblight</string>
    <string name="ailment_ice">Iceblight</string>
    <string name="ailment_dragon">Dragonblight</string>
    <string name="ailment_blast">Blastblight</string>
    <string name="ailment_bleed">Bleeding</string>
    <string name="ailment_poison">Poison</string>
    <string name="ailment_poison_noxious">Noxious Poison</string>
    <string name="ailment_poison_deadly">Deadly Poison</string>
    <string name="ailment_sleep">Sleep</string>
    <string name="ailment_paralysis">Paralysis</string>
    <string name="ailment_stun">Stun</string>
    <string name="ailment_snowman">Snowman</string>
    <string name="ailment_muddy">Muddy</string>
    <string name="ailment_bubbles">Bubbles</string>
    <string name="ailment_boned">Boned</string>
    <string name="ailment_mucus">Mucus</string>
    <string name="ailment_soiled">Soiled</string>
    <string name="ailment_environmental">Environmental</string>
    <string name="ailment_defensedown">Defense Down</string>
    <string name="ailment_frenzy">Frenzy Virus</string>
    <string name="ailment_confusion">Confusion</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_monsters">Monsters</string>
    <string name="title_weapons">Weapons</string>
    <string name="title_armor">Armor</string>
    <string name="title_armor_sets">Armor Sets</string>
    <string name="title_quests">Quests</string>
    <string name="quest_group_hr1">HR1</string>
    <string name="quest_group_hr2">HR2</string>
    <string name="quest_group_hr3">HR3</string>
    <string name="quest_group_hr4">HR4</string>
    <string name="quest_group_hr5">HR5</string>
    <string name="quest_group_hr6">HR6</string>
    <string name="quest_group_g1">G1</string>
    <string name="quest_group_g2">G2</string>
    <string name="quest_group_g3">G3</string>
    <string name="quest_group_g4">G4</string>
    <string name="quest_group_g5">G5</string>
    <string name="quest_group_g6">G6</string>
    <string name="quest_group_g7">G7</string>
    <string name="quest_group_level_1">Level 1</string>
    <string name="quest_group_level_200">Level 200</string>
    <string name="quest_group_level_1000">Level 1000</string>
    <string name="quest_group_level_9999">Level 9999</string>
    <string name="quest_group_exotic">Exotic Quests</string>
    <string name="quest_group_gathering">Gathering Quests</string>
    <string name="quest_group_burst_origin">Burst Origin Quests</string>
    <string name="quest_group_g_exotic">G Exotic Quests</string>
    <string name="quest_group_quest_orders">Quest Orders</string>
    <string name="quest_group_training_support">Training Support Quests</string>
    <string name="quest_group_superior">Superior Quests</string>
    <string name="quest_group_promotional">Promotional</string>
    <string name="quest_group_premium">Premium Quests</string>
    <string name="quest_group_paw_coins">Paw Coins</string>
    <string name="quest_group_luxury">Luxury Quests</string>
    <string name="quest_group_hidden_stone">Hiden Stone Quests</string>
    <string name="quest_group_hr_ranking">HR Ranking Rewards</string>
    <string name="quest_group_gear_acq">Gear Acquisition Quests</string>
    <string name="quest_group_hunting_tech">Hunting Technique Quests</string>
    <string name="quest_group_g_superior">G Superior Quests</string>
    <string name="quest_group_g_promotional">G Promotional</string>
    <string name="quest_group_g_hidden_stone">G Hiden Stone Quests</string>
    <string name="quest_group_shiten">Shiten</string>
    <string name="quest_group_adv_shiten">Adv Shiten Quests</string>
    <string name="quest_group_low_rank">Low Rank</string>
    <string name="quest_group_g_rank">G Rank</string>
    <string name="quest_group_unknown"></string>
    <string name="quest_group_reward_main">Main</string>
<string name="ui_reward_colon">Reward:</string>
<string name="ui_quest_colon">Quest:</string>
<string name="ui_goal_colon">Goal:</string>
<string name="ui_location_colon">Location:</string>
<string name="ui_s_rank_colon">S Rank:</string>
<string name="ui_a_rank_colon">A Rank:</string>
<string name="ui_b_rank_colon">B Rank:</string>
</resources>